# ttpu_crm

./: .env.example  .gitignore  CATALOG_FIX_SUMMARY.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_PM2_SUPERVISOR.md  PROJECT_DOCUMENTATION.md  README.md  SERVICE_TOKEN_QOLLANMA.md  docker-compose.yml  nginx.conf  req.txt  roster_demo.xlsx
bot1_service/: .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
bot1_service/bot1_service/: __init__.py  main.py
bot1_service/data/: bot1_store.json  catalog_local.json
bot2_service/: .dockerignore  .env  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
bot2_service/bot2_service/: __init__.py  main.py
server/: .coverage  .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  conftest.py  db.sqlite3  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  sql-structure.sql
server/ai_gateway/: client.py
server/ai_verification/: admin.py  apps.py  generation.py  models.py  orchestration.py  pricing.py  prompts.py  serializers.py  services.py  urls.py  views.py
server/analytics/: views.py
server/audit/: admin.py  models.py  utils.py
server/authn/: admin.py  apps.py  authentication.py  models.py  serializers.py  views.py
server/bot1/: admin.py  apps.py  models.py  serializers.py  views.py
server/bot2/: admin.py  ai_skills.py  apps.py  models.py  models_enrollment.py  serializers.py  services.py  views.py
server/catalog/: admin.py  models.py  serializers.py  views.py
server/common/: auth.py  exceptions.py  models.py  pagination.py  permissions.py  throttles.py  time.py
server/crm/: access.py  admin.py  ai_summary.py  followup.py  matching.py  models.py  serializers.py  telegram.py  urls.py  views.py
server/crm_server/: asgi.py  settings.py  urls.py  wsgi.py
server/documents/: admin.py  models.py  (+3 more)
(+244 files in other folders)
