[tool.poetry]
name = "bot2-service"
version = "0.1.0"
description = "Telegram bot2 survey service for TTPU CRM"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bot2_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.12.0"
httpx = "^0.27.0"
python-dotenv = "^1.2.1"
ujson = "^5.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
